--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,9 +4,9 @@ android {
     buildToolsVersion '21.1.2'
 
     defaultConfig {
-        applicationId "io.isoft.protask"
-        minSdkVersion 11
-        targetSdkVersion 11
+        applicationId "io.isoft.protasker"
+        minSdkVersion 14
+        targetSdkVersion 14
     }
 
     buildTypes {
