--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,8 +4,6 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    App-Theme name="AppBaseTheme" parent="android:Theme.Light"
-
     <uses-sdk
         android:minSdkVersion="11"
         android:targetSdkVersion="11" />
@@ -14,10 +12,9 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/Theme.Styled" >
         <activity
-            android:name=".AddNewTask"
-            android:label="@string/app_name" >
+            android:name=".AddNewTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
